# bin-picking-robot

./: .gitignore  README.md  out.txt  pyscript.py  requirements.txt  setup.py  test2.py
bpbot/: __init__.py  binpicking.py  config.py  utils.py
bpbot/driver/phoxi/: .phoxicontrol.cpp.swp  CMakeLists.txt  codegen.py  phoxi_client.py  phoxi_pb2.py  phoxi_pb2_grpc.py  phoxi_server.py  phoxicontrol.cpp
bprobot/: binpicking.py  utils.py
bprobot/driver/phoxi/: CMakeLists.txt  phoxi.proto  phoxi_pb2.py  phoxicontrol.cpp
cfg/: .config.yaml.swp  .hand.yaml.swp  config copy.yaml  config.ini  config.py  config.yaml  config.yaml.bak  hand.yaml
config/: config.yaml  config_cable.yaml  config_picksep.yaml  config_picksep_cable.yaml  config_soft_hand.yaml  hand.yaml
data/: calibmat.txt
example/: bin_picking.py  binpicking.py  detect.py  example_action.py  example_auto_pick.py  example_auto_picking.py  example_baseline.py  example_calib_ws.py  example_capture.py  example_gen_emap.py  example_gen_marker.py  example_graspability_pick.py  example_hand_eye.py  example_tangle_pick.py  example_tangle_picking.py  example_test_graspability.py  example_vis_handeye.py  mfcc.py  plot_ft.py  run_autopick.py  run_caging.py  run_click.py  run_force.py  run_handeye.py  run_handeye_calib.py  run_pick.py  run_pick_cable.py  run_pick_circle.py  run_pick_closeloop copy 2.py  run_pick_closeloop copy.py  run_pick_closeloop.py  run_pick_feedback.py  run_picksep.py  run_picksep_closeloop copy.py  run_picksep_closeloop.py  run_pnsn.py  run_sample.py  run_soft_hand.py  run_workspace.py  script_aaaaautopick.py  (+16 more)
grasp/: graspability.py  gripper.py
grasping/: graspability.py  gripper.py
learning/: .installation.txt.swp  installation.txt
(+375 files in other folders)
